--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@ body{
     position: relative;
 }
 
+.super-parent{
+    margin-top: 2%;
+}
 .parent {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -45,6 +48,8 @@ textarea{
 .container{
     height: 100%;
     width: 100%;
+    height: 75vh;
+
 }
 
 .text{
@@ -60,12 +65,12 @@ textarea{
     background: #FFFFFF;
     margin: 2.5%;
     border-radius: 10% 10% 10% 10% / 10% 10% 10% 10% ;
-    height: 38.5rem;
+    height: 100%;
 }
 
 .result{
     width: 100%;
-    height: 10rem;
+    height: 100%;
 }
 
 .buttons{
@@ -103,13 +108,13 @@ button{
     color: #FFFFFF;
 }
 
+.copyButton{
+
+}
+
 .footer{
     display: grid;
-    grid-template-columns: 0.010fr 1fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    margin-top: 2%;
+    /* margin-top: 0.5rem; */
     background: #D8DFE8;
     border-radius: 12px;
 }
@@ -118,13 +123,11 @@ button{
     vertical-align: middle;
   }
   
-  /* FOOTER */
   .footer-content {
     text-align: center;
   }
   
   .footer-logo {
-    /* display: none; */
   }
   
   .footer .social {
@@ -138,4 +141,44 @@ button{
 
 .hide{
     visibility: hidden;
+}
+
+.erase{
+    display: none;
+}
+
+@media screen and (max-width: 1024px) {
+
+    .parent {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.75fr .5fr;
+        grid-column-gap: 0px;
+        grid-row-gap: 2.5rem;
+        margin-top: 2rem;
+    }
+
+    .buttons{
+        margin-top: 1.5rem;
+    }
+
+    .img{
+        display: none;
+    }
+
+    .result{
+        height: 100%;
+    }
+
+    .hide{
+        display: none;
+    }
+
+    .rigth{
+        height: 75%;
+    }
+
+    .footer{
+        margin-top: 5rem;
+    }
 }
