--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@ body{
     background: #F3F5FC;
     position: relative;
 
-    /* display: grid;
+    display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.25fr 2fr 0.3fr;
+    grid-template-rows: 0.25fr 0.5fr 0.1fr;
     grid-column-gap: 0px;
-    grid-row-gap: 0px; */
+    grid-row-gap: 0px;
 }
 
 .super-parent{
@@ -33,8 +33,8 @@ body{
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     max-width: 95%;
-    margin-left: auto;
-    margin-right: auto; 
+    margin-left: 5%;
+    margin-right: 5%; 
     
     height: 90vh;
     position: relative;
@@ -50,10 +50,9 @@ textarea{
 .left{
     align-items: center;
     justify-content: center;
-    display: flex;
+    /* display: flex; */
     height: 85%;
     margin-top: 3%;
-
 }
 
 .container{
@@ -86,7 +85,7 @@ textarea{
 
 .buttons{
     width: 100%;
-    height: 15%;
+    /* height: 15%; */
     align-items: center;
     justify-content: center;
     display: flex;
@@ -133,9 +132,6 @@ button{
 text-align: center;
 }
 
-.footer-logo {
-}
-
 .footer .social {
 justify-content: center;
 padding: 0;
@@ -156,33 +152,49 @@ padding: 0;
 @media screen and (max-width: 1024px) {
 
 
+
     .parent {
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 0.75fr .5fr;
+        /* grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr .5fr;
         grid-column-gap: 0px;
-        grid-row-gap: 2.5rem;
-        margin-top: 2rem;
+        grid-row-gap: 2.5rem; */
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        /* height: 100vh; */
+    }
+
+    .text{
+        height: 60%;
     }
 
     .buttons{
-        margin-top: 1.5rem;
+        /* margin-top: 1.5rem; */
     }
 
     .img{
         display: none;
     }
 
+    .text{
+        /* height: 60%; */
+    }
+
     .result{
-        height: 100%;
+        /* height: 40%; */
     }
 
     .hide{
         display: none;
     }
 
-    .rigth{
+    /* .rigth{
         height: 75%;
+    } */
+
+    .left{
     }
 
     .footer{
