--- a/styles.css
+++ b/styles.css
@@ -13,22 +13,19 @@ body{
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.25fr 0.5fr 0.1fr;
+    grid-template-rows: 5% 80% 15%;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
 
 .super-parent{
     margin-top: 2%;
-    /* display: grid; */
-    /* grid-template-columns: 1fr; */
-    /* grid-template-rows: 0.25fr 1.5fr 0.25fr; */
     width: 100%;
 }
     
 .parent {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 60% 40%;
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
@@ -51,15 +48,13 @@ textarea{
     align-items: center;
     justify-content: center;
     /* display: flex; */
-    height: 85%;
-    margin-top: 3%;
+    /* height: 85%; */
+    /* margin-top: 3%; */
 }
 
 .container{
     height: 100%;
     width: 100%;
-    height: 75vh;
-
 }
 
 .text{
@@ -74,8 +69,8 @@ textarea{
     display: flex;
     background: #FFFFFF;
     margin: 2.5%;
-    border-radius: 10% 10% 10% 10% / 10% 10% 10% 10% ;
-    height: 100%;
+    border-radius: 3rem ;
+    /* height: 100%; */
 }
 
 .result{
@@ -150,28 +145,15 @@ padding: 0;
 }
 
 @media screen and (max-width: 1024px) {
-
-
-
     .parent {
         display: grid;
-        /* grid-template-columns: 1fr;
-        grid-template-rows: 0.5fr .5fr;
-        grid-column-gap: 0px;
-        grid-row-gap: 2.5rem; */
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        /* height: 100vh; */
+        grid-template-columns: 100%;
+        grid-template-rows: 50% auto;
+        grid-row-gap: 0px;        
     }
 
     .text{
         height: 60%;
-    }
-
-    .buttons{
-        /* margin-top: 1.5rem; */
     }
 
     .img{
@@ -179,22 +161,11 @@ padding: 0;
     }
 
     .text{
-        /* height: 60%; */
-    }
-
-    .result{
-        /* height: 40%; */
+        height: 60%;
     }
 
     .hide{
         display: none;
-    }
-
-    /* .rigth{
-        height: 75%;
-    } */
-
-    .left{
     }
 
     .footer{
