--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@
     --fontBase: 'Poppins', sans-serif;
     --white: #FFFFFF;
     /* --colorBase : #F3F5FC; */
-    --colorBase : red;
-
   }
 
 body{
@@ -33,8 +31,12 @@ body{
     margin-left: 5%;
     margin-right: 5%; 
     
-    height: 90vh;
+    height: 80vh;
     position: relative;
+}
+
+.logo{
+    margin-top: 3%;
 }
 
 textarea{
@@ -42,6 +44,10 @@ textarea{
     font-size: larger;
     align-items: center;
     resize: none;
+}
+
+textarea:focus {
+    outline: none;
 }
 
 .left{
@@ -68,14 +74,25 @@ textarea{
     justify-content: center;
     display: flex;
     background: #FFFFFF;
-    margin: 2.5%;
+    /* margin: 0.5%; */
     border-radius: 3rem ;
-    /* height: 100%; */
+    height: 70vh;
+    position: relative;
+    margin-top: 7%;
+}
+
+.container-result{
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .result{
-    width: 100%;
-    height: 100%;
+    margin: 3.5%;
+    width: 95%;
+    height: 95%;
 }
 
 .buttons{
@@ -120,21 +137,34 @@ button{
 }
 
 .button-icon img {
-    vertical-align: middle;
+    /* vertical-align: middle; */
 }
 
 .footer-content {
-text-align: center;
+    text-align: center;
 }
 
 .footer .social {
-justify-content: center;
-padding: 0;
+    justify-content: center;
+    padding: 0;
+    text-align: center;
 }
 
 .footer-container{
     margin-top: 2%;
 }
+
+.social-button {
+    background-color: transparent; 
+    border: none; 
+    padding: 0;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.social-button:hover{
+    transform: scale(1.1); 
+  }
 
 .hide{
     visibility: hidden;
@@ -149,19 +179,25 @@ padding: 0;
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 50% auto;
-        grid-row-gap: 0px;        
+        grid-row-gap: 0px;    
+        margin-bottom: 0%;    
+    }
+
+    .rigth{
+        height: 80%;
     }
 
     .text{
         height: 60%;
+    }
+
+    .result{
+        height: 60%;
+        width: 95%;
     }
 
     .img{
         display: none;
-    }
-
-    .text{
-        height: 60%;
     }
 
     .hide{
@@ -169,6 +205,6 @@ padding: 0;
     }
 
     .footer{
-        margin-top: 5rem;
+        margin-top: 0;
     }
 }
