--- a/styles.css
+++ b/styles.css
@@ -74,11 +74,11 @@ textarea:focus {
     justify-content: center;
     display: flex;
     background: #FFFFFF;
-    /* margin: 0.5%; */
     border-radius: 3rem ;
     height: 70vh;
     position: relative;
     margin-top: 7%;
+    
 }
 
 .container-result{
@@ -86,18 +86,22 @@ textarea:focus {
     width: 100%;
     align-items: center;
     justify-content: center;
-    display: flex;
 }
 
 .result{
     margin: 3.5%;
-    width: 95%;
-    height: 95%;
+    width: 93%;
+    height: 75%;
+    display: flex;
+}
+
+.img{
+    max-width: 100%;
+    height: auto; 
 }
 
 .buttons{
     width: 100%;
-    /* height: 15%; */
     align-items: center;
     justify-content: center;
     display: flex;
