--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,12 @@
 :root {
     --fontBase: 'Poppins', sans-serif;
-    --background: #F3F5FC;
-    --primary_button: #0A3871;
+    --background: #1D1F21;
+    --primary_button: #FF6600;
     --secondary_button: #D8DFE8;
-    --right_backgorund: #FFFFFF;
-    --footer_background: #D8DFE8;
+    --Second_backgorund: #444648;
+    --footer_background: #444648;
+    --font_white: #FFFFFF;
+    --font_black: black;
   }
 
 body{
@@ -18,6 +20,7 @@ body{
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 
+    color: var(--font_white);
 }
 
 .super-parent{
@@ -29,7 +32,7 @@ body{
     display: grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
+    grid-column-gap: 1rem;
     grid-row-gap: 0px;
     max-width: 95%;
     margin-left: 5%;
@@ -37,6 +40,7 @@ body{
     
     height: 80vh;
     position: relative;
+    
 }
 
 .logo{
@@ -48,7 +52,27 @@ textarea{
     font-size: larger;
     align-items: center;
     resize: none;
+    background: none;
+    color: var(--font_white);
+
 }
+
+textarea::placeholder {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 100%;
+    padding: 0;
+    font-size: 16px; /* ajusta el tamaño de fuente según tus necesidades */
+    color: #999; /* ajusta el color según tus necesidades */
+    text-align: center; /* centra el placeholder */
+    pointer-events: none; 
+  }
+
+  textarea::first-letter{
+    top: 50%;
+  }
 
 textarea:focus {
     outline: none;
@@ -57,6 +81,8 @@ textarea:focus {
 .left{
     align-items: center;
     justify-content: center;
+    border-radius: 3rem ;
+    background: var(--Second_backgorund);
 }
 
 .container{
@@ -66,19 +92,33 @@ textarea:focus {
 
 .text{
     width: 95%;
-    height: 90%;
+    height: 70%;
     background: none;
+    margin: 2.5%;
+    /* margin-top: 5.7%; */
+        /* margin: 3.5%;
+    width: 93%;
+    height: 75%;
+    display: flex; */
+
+}
+
+.warning{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
 }
 
 .rigth{
     align-items: center;
     justify-content: center;
     display: flex;
-    background: var(--right_backgorund);
+    background: var(--Second_backgorund);
     border-radius: 3rem ;
     height: 70vh;
     position: relative;
-    margin-top: 7%;
+    /* margin-top: 7%; */
     
 }
 
@@ -110,35 +150,35 @@ textarea:focus {
 
 button{
     border-radius: 20px;
-    width: 50%;
+    width: 45%;
     height: 3rem;
     margin: 1%;
 }
 
 .primary-button{
     background-color: var(--primary_button);
-    color: #FFFFFF;
+    color: var(--font_white);
 }
 
 .primary-button:hover{
     background-color: var(--secondary_button);
-    color: var(--primary_button);
+    color: var(--font_black);
 }
 
 .secondary-button{
-    background-color: #D8DFE8;
-    color: var(--primary_button);
+    background-color: var(--secondary_button);
+    color: var(--font_black);
 }
 
 .secondary-button:hover{
     background-color: var(--primary_button);
-    color: #FFFFFF;
+    color: var(--font_white);
 }
 
 .footer{
     display: grid;
     background: var(--footer_background);
-    border-radius: 12px;
+    border-radius: 2rem;
 }
 
 .button-icon img {
@@ -184,7 +224,7 @@ button{
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: 50% auto;
-        grid-row-gap: 0px;    
+        grid-row-gap: 1rem;    
         margin-bottom: 0%;    
     }
 
