--- a/styles/styles.css
+++ b/styles/styles.css
@@ -230,6 +230,10 @@ button{
 
     .rigth{
         height: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center; 
     }
 
     .text{
